[FIX] Balance widget: Don't wrap issuer names

--- a/src/less/ripple/widgets.less
+++ b/src/less/ripple/widgets.less
@@ -133,6 +133,7 @@
           dt {
             width: 59%;
             text-overflow: ellipsis;
+            white-space: nowrap;
             overflow: hidden;
             font-weight: 400;
             .pull-left;
